[package]
name = "sparrow"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1.89"
bytes = "1"
futures = "0.3"
http = "1"
http-body-util = "0.1"
hyper = { version = "1.7.0", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["server", "tokio"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time"] }
tower-service = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
